# calmate

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: demo_mapping.py
src/calmate/: __init__.py  apply.py  cli.py  mapper.py  ontology.py  review.py  store.py
src/calmate/backends/: __init__.py  base.py  omicverse.py
tests/: conftest.py  test_apply.py  test_backends.py  test_mapper.py  test_omicverse_integration.py  test_ontology.py  test_semantic_deps.py  test_store.py
