[project]
name = "calmate"
version = "0.1.0"
description = "Cell Annotation Label Mapping with Assisted Term Editing"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "pronto>=2.5",
    "click>=8.0",
    "rich>=13.0",
]

[project.optional-dependencies]
omicverse = ["omicverse>=1.6", "torch_geometric", "transformers<5", "setuptools<81", "sentence-transformers"]
adata = ["anndata>=0.10"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
calmate = "calmate.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/calmate"]

[tool.pytest.ini_options]
testpaths = ["tests"]
